[gd_scene load_steps=4 format=3 uid="uid://uc48xldo44l8"]

[ext_resource type="LabelSettings" uid="uid://cjjbq7li4dbhd" path="res://Langdocs/big_label_38.tres" id="1_20r4y"]
[ext_resource type="Script" path="res://Langdocs/prog_52a_func.gd" id="1_fifs4"]
[ext_resource type="Theme" uid="uid://bku4trc545jag" path="res://big_font.tres" id="2_jd6n7"]

[node name="Prog52aFunc" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fifs4")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 79.0
offset_top = 26.0
offset_right = 298.0
offset_bottom = 91.0
text = "Length:"
label_settings = ExtResource("1_20r4y")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 127.0
offset_right = 296.0
offset_bottom = 192.0
text = "Width:
"
label_settings = ExtResource("1_20r4y")

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 228.0
offset_right = 1066.0
offset_bottom = 450.0
text = "
"
label_settings = ExtResource("1_20r4y")

[node name="txtLen" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 285.0
offset_top = 12.0
offset_right = 713.0
offset_bottom = 99.0
theme = ExtResource("2_jd6n7")

[node name="txtWid" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 287.0
offset_top = 113.0
offset_right = 715.0
offset_bottom = 200.0
theme = ExtResource("2_jd6n7")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 509.0
offset_right = 280.0
offset_bottom = 638.0
theme = ExtResource("2_jd6n7")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 402.0
offset_top = 511.0
offset_right = 677.0
offset_bottom = 640.0
theme = ExtResource("2_jd6n7")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 868.0
offset_top = 518.0
offset_right = 1143.0
offset_bottom = 647.0
theme = ExtResource("2_jd6n7")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
